# wasm-triangle

./: Cargo.toml  README.md  app-de4069e39b6541b5.css  index.html  script-1e11c3913a129cfb.js  wasm-triangle-140c500a4dfaf8c6.js  wasm-triangle-140c500a4dfaf8c6_bg.wasm
.github/workflows/: pages.yml  rust.yml
src/: app.css  lib.rs  main.rs
