[package]
name = "wasm-triangle"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
] }
winit = "0.29.10"
wgpu = { version = "0.19.1", default-features = false, features = [
    "webgl",
    "wgsl",
] }
